<resources>
    <string name="app_name">AplikacjaTreningowa</string>
    <string name="email">E-mail</string>
    <string name="menu">Menu</string>
    <string name="haslo">Hasło</string>
    <string name="zaloguj">ZALOGUJ</string>
    <string name="zapomnialesHasla">Zapomniałeś hasła?</string>
    <string name="nowyUzytkownik">Nowy użytkownik? Zarejestruj się!</string>
    <string name="maszKonto">Masz już konto?</string>
    <string name="uzytIcon">Użytkownik</string>
    <string name="imie">Imie</string>
    <string name="nazwisko">Nazwisko</string>
    <string name="zarejestruj">Zarejestruj</string>
    <string name="zaloz">Załóż konto już teraz!</string>
    <string name="kontoZaloguj">Masz już konto? Zaloguj się!</string>
    <string name="plan">Plan treningowy</string>

    <string name="home">Home</string>
    <string name="profil">Profil</string>
    <string name="ustawienia">Ustawienia</string>
    <string name="mojPlan">Mój plan</string>
    <string name="wyloguj">Wyloguj</string>
    <string name="przykladowePlany">Przykładowe plany</string>

    <string name="otworzMenu">Otworz menu</string>
    <string name="zamknijMenu">Zamknij menu</string>

    <string name="miesnieBrzucha">Mięsnie brzucha</string>
    <string name="klatkaPiersiowa">Klatka piersiowa</string>

    <string name="opisAbdominalCrunches">Leżąc twarzą do góry ze zgiętymi kolanami unieś górny odcinek pleców. Działa przede wszystkim na mięsnie brzucha: prosty i ukośny.</string>
    <string name="abdominalCrunches">Abdominal Crunches</string>
    <string name="legRaises">Leg Raises</string>
    <string name="zacznijTrening">Rozpocznij trening</string>
    <string name="czasZero">00:00</string>
    <string name="russianTwist">Russian Twist</string>
    <string name="plank">Plank</string>

    <string name="diamondPushUp">Diamond Push Up</string>
    <string name="pullUp">Pull Up</string>
    <string name="benchPress">Bench Press</string>
</resources>