<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/home"
            android:iconTint="@color/lightBlue" />
        <item
            android:id="@+id/nav_person"
            android:icon="@drawable/icon_person"
            android:title="@string/profil"
            android:iconTint="@color/lightBlue"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/icon_settings"
            android:title="@string/ustawienia"
            android:iconTint="@color/lightBlue"/>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icon_close"
            android:title="@string/wyloguj"
            android:iconTint="@color/lightBlue"/>
    </group>

    <item android:title="@string/plan">
        <menu>
            <item
                android:id="@+id/nav_myplan"
                android:icon="@drawable/icon_plan"
                android:title="@string/mojPlan"
                android:iconTint="@color/lightBlue" />
            <item
                android:id="@+id/nav_exampleplan"
                android:icon="@drawable/icon_plan"
                android:title="@string/przykladowePlany"
                android:iconTint="@color/lightBlue"/>
        </menu>
    </item>

</menu>