<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark">

    <View
        android:id="@+id/view"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/wave" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/lightBlue" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/przykladowePlany"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:layout_marginTop="25dp"
        android:gravity="center"/>


    <ImageView
        android:id="@+id/abs"
        android:layout_marginTop="250dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@drawable/miesnie_brucha2"
        android:alpha="0.7" />


    <TextView
        style="@style/shadow"
        android:id="@+id/absText"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignTop="@+id/abs"
        android:gravity="center_horizontal"
        android:text="@string/miesnieBrzucha" />

    <ImageView
        android:id="@+id/pushUp"
        android:layout_marginTop="420dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:alpha="0.7"
        android:background="@drawable/pompki2" />

    <TextView
        style="@style/shadow"
        android:id="@+id/pushUpText"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignTop="@+id/pushUp"
        android:gravity="center_horizontal"
        android:text="@string/klatkaPiersiowa" />

</RelativeLayout>