<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark">

    <View
        android:id="@+id/view"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/wave" />
    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/lightBlue" />

    <TextView
        android:id="@+id/nameOfExercise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/abdominalCrunches"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="100dp"
        android:layout_height="match_parent">

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/workoutGif"
            android:layout_width="350dp"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/descriptionOfExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="255dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/lightBlue"
            android:textSize="25sp"
            android:text="@string/opisAbdominalCrunches"/>

        <TextView
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/workoutGif"
            android:layout_marginTop="200dp"
            android:layout_centerHorizontal="true"
            android:text="@string/czasZero"
            android:textColor="@color/lightBlue"
            android:textSize="50sp" />

    </RelativeLayout>


</RelativeLayout>