<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark">

    <View
        android:id="@+id/view"
        android:layout_marginTop="60dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/wave" />

    <View
        android:id="@+id/view4"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/lightBlue" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:text="@string/miesnieBrzucha"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_marginTop="200dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:background="@drawable/crunches"/>

            <TextView
                android:id="@+id/abdominalCrunches"
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="155dp"
                android:text="@string/abdominalCrunches"
                android:textColor="@color/lightBlue"
                android:gravity="center"
                android:textSize="22sp"
                />

            <TextView
                android:layout_marginLeft="155dp"
                android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0:30"
                android:gravity="center"
                android:textColor="#FFF"
                android:layout_below="@id/abdominalCrunches"
                />

        </RelativeLayout>

        <View
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/lightBlue" />

        <RelativeLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <pl.droidsonroids.gif.GifImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:background="@drawable/legraises"/>

            <TextView
                android:id="@+id/legRaises"
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="155dp"
                android:text="@string/legRaises"
                android:gravity="center"
                android:textColor="@color/lightBlue"
                android:textSize="22sp"
                />

            <TextView
                android:layout_marginLeft="155dp"
                android:textSize="22sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="0:30"
                android:gravity="center"
                android:textColor="#FFF"
                android:layout_below="@id/legRaises"
                />

        </RelativeLayout>

        <View
            android:layout_marginTop="3dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/lightBlue" />

    </LinearLayout>
</RelativeLayout>